/*
 * $Id: ChangeLog,v 1.276 2002/06/17 08:31:53 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-06-17 11:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed Minimal Match Marker when inside first eelement of an OPTIONAL group.

2002-06-17 01:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * doc/cstruct.txt
    * Updated documentation of C Structure implementation.

2002-06-17 00:51 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    * Moved hb_stack.Return cleanup logic into hb_vmSend() and removed as prefix to calls.

  * include/hbapiitm.h
  * source/vm/fastitem.c
    + Added hb_itemPutCRawStatic()

  * include/cstruct.ch
  * source/vm/arrayshb.c
    + Added support for INPLACE nested structures.
    + Added support for C ARRAYs as structure members.

  * source/rtl/cstruct.prg
    + Added support for CTYPE_*SHORT*.
    + Added support for INPLACE nested structures.
    + Added support for C ARRAYs as structure members.
    + Added Function HB_IS_CStructure()
    + Added Method SayMembers()

  * tests/tstcstru.prg
    - Removed obsolete array syntax.
    * Modified to demo INPLACE Nested Structures and Array Members.

2002-06-15 17:10 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/vm/hvm.c
    ! Fixed support for FOR_NEXT with STEP 0

2002-06-14 11:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/getsys.prg
    ! Fixed 2 warings about RETURN.

  * source/vm/arrayshb.c
    * Replaced min() with ( x < y ? ) syntax.

2002-06-14 11:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrayshb.c
    ! Fixed alignment logic.

  * source/rtl/cstruct.prg
    * Changed default alignment to 8.

  * tests/tstcstru.prg
    * Changed test to use DWORD Alignment (4).

2002-06-14 14:40 UTC-0300 Walter Negro <anegro@overnet.com.ar>