@@ -1,5 +1,5 @@
 /*
- * $Id: hvm.c,v 1.79 2002/06/15 20:06:42 walito Exp $
+ * $Id: hvm.c,v 1.80 2002/06/17 08:07:36 ronpinkas Exp $
  */
 
 /*
@@ -202,6 +202,8 @@ extern void hb_mthAddTime( void *, ULONG ); /* profiler from classes.c */
 
 BOOL hb_bProfiler = FALSE; /* profiler status is off */
 BOOL hb_bTracePrgCalls = FALSE; /* prg tracing is off */
+ULONG hb_ulOpcodesCalls[ HB_P_LAST_PCODE ]; /* array to profile opcodes calls */
+ULONG hb_ulOpcodesTime[ HB_P_LAST_PCODE ]; /* array to profile opcodes consumed time */
 
 /* virtual machine state */
 
@@ -378,6 +380,17 @@ void HB_EXPORT hb_vmInit( BOOL bStartMainProc )
    /* Check for some internal switches */
    hb_cmdargProcessVM();
 
+   /* Initialize opcodes profiler support arrays */
+   {
+      ULONG ul;
+
+      for( ul = 0; ul < HB_P_LAST_PCODE; ul++ )
+      {
+         hb_ulOpcodesCalls[ ul ] = 0;
+         hb_ulOpcodesTime[ ul ] = 0;
+      }
+   }
+
    /* Create trace.log for tracing. */
    fpTrace = fopen( "trace.log", "w" );
    if( fpTrace )
@@ -517,6 +530,8 @@ void HB_EXPORT hb_vmExecute( const BYTE * pCode, PHB_SYMB pSymbols )
    BOOL bCanRecover = FALSE;
    ULONG ulPrivateBase;
    LONG lOffset;
+   ULONG ulLastOpcode = 0; /* opcodes profiler support */
+   ULONG ulPastClock = 0;  /* opcodes profiler support */
 
    HB_TRACE(HB_TR_DEBUG, ("hb_vmExecute(%p, %p)", pCode, pSymbols));
 
@@ -530,6 +545,17 @@ void HB_EXPORT hb_vmExecute( const BYTE * pCode, PHB_SYMB pSymbols )
 
    while( pCode[ w ] != HB_P_ENDPROC )
    {
+
+      if( hb_bProfiler )
+      {
+         ULONG ulActualClock = ( ULONG ) clock();
+
+         hb_ulOpcodesTime[ ulLastOpcode ] += ( ulActualClock - ulPastClock );
+         ulPastClock = ulActualClock;
+         ulLastOpcode = pCode[ w ];
+         hb_ulOpcodesCalls[ ulLastOpcode ]++;
+      }
+
       if( hb_set.HB_SET_CANCEL )
       {
          static unsigned short s_iCancel = 0;
@@ -5893,5 +5919,27 @@ HB_FUNC( HB_FUNCPTR )
    else
    {
       hb_vmPushLong( 0 );
+   }
+}
+
+HB_FUNC( __OPCOUNT ) /* it returns the total amount of opcodes */
+{
+   hb_retnl( HB_P_LAST_PCODE - 1 );
+}
+
+HB_FUNC( __OPGETPRF ) /* profiler: It returns an array with an opcode called and
+                         consumed times { nTimes, nTime },
+                         given the opcode index */
+{
+   ULONG ulOpcode = hb_parnl( 1 );
+
+   hb_reta( 2 );
+   hb_stornl( 0, -1, 1 );
+   hb_stornl( 0, -1, 2 );
+
+   if( ulOpcode < HB_P_LAST_PCODE )
+   {
+      hb_stornl( hb_ulOpcodesCalls[ ulOpcode ], -1, 1 );
+      hb_stornl( hb_ulOpcodesTime[ ulOpcode ],  -1, 2 );
    }
 }
